--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,12 @@
 .card {
-  width: 10rem;
-  height: 13rem;
   position: absolute;
+  /* width: max-content; */
+  min-width: 15rem;
+  max-width: 20rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  width: 10rem;
   text-align: center;
   background: rgba(255, 255, 255, 0.26);
   border: 7px solid var(--orangeCard);
@@ -38,7 +38,19 @@
 }
 /* cards */
 
+ul {
+  list-style-type: circle;
+}
 
+ul li {
+  text-align: left;
+  margin-top: 0.5rem;
+}
+
+.heading {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
 
 
 @media screen and (max-width: 480px){
