--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  overflow-x: hidden;
+}
+
 .App{
     padding: 0.5rem 3.5rem;
     overflow: hidden;
