Update CSS styles

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,37 +1,9 @@
-h2 {
-    font-size: 2rem;
-    white-space: nowrap;;
-    font-weight: bold;
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-top: 6rem;
-  }
 
-.About {
-    display: flex;
-    align-items: center;
-    height: 77vh;
-    position: relative;
-  }
-
-  .left , .right {
-    flex: 1;
-  }
-.left {
-    text-align: center;
-}
   .left img {
     width: 100%;
     max-width: 400px;
     border-radius: 10px;
   }
-
-
-  .right p strong {
-    font-weight: bold;
-  }
-
-
 
   .blur {
     position: absolute;
@@ -59,9 +31,7 @@ h2 {
   }
 
   .video-container iframe {
-    position: relative;
-    left: 10%;
-    top: 32px;
-    width: 80%;
-    height: 430px;
+    /* position: relative; */
+    /* left: 10%; */
+    /* top: 32px; */
   }
