--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     --blueCard : #DDF8FE;
     --purple: rgb(238 210 255);
     --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
-    --orangeCard: rgba(252, 166, 31, 0.45);
+    --orangeCard: #fca61f73;
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
 
@@ -20,7 +20,7 @@ body {
 }
 
 .App{
-    padding: 0.5rem 3.5rem;
+    /* padding: 0.5rem 3.5rem; */
     overflow: hidden;
     color: var(--black);    
 }
