--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -8,7 +8,7 @@
   gap: 1rem;
   align-items: center;
   text-align: center;
-  background: rgba(255, 255, 255, 0.26);
+  background: #ffffff42;
   border: 7px solid var(--orangeCard);
   box-shadow: var(--boxShadow);
   border-radius: 20px;
