--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   gap: 5rem;
-  height: 30vh;
+  /* height: 30vh; */
   margin-bottom: 8rem;
   /* darkmode */
   color: var(--black);
