--- a/src/components/EventTimeline/EventTimeline.css
+++ b/src/components/EventTimeline/EventTimeline.css
@@ -5,7 +5,7 @@
   
   .circle-black {
     background-color: black;
-    border-radius: 50%;
+    border-radius:10px;
     aspect-ratio: 1/1;
     display: flex;
     justify-content: center;
