--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -20,7 +20,7 @@
 .i-name > :nth-child(1) {
   color: var(--black);
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .i-name > :nth-child(2) {
   color: var(--orange);
@@ -38,7 +38,7 @@
   font-weight: bold;
 }
 .i-icons {
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
   display: flex;
   gap: 0rem;
 }
