--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -2,9 +2,9 @@
   padding: 0 3rem 0 3rem;
   /* display: flex; */
   /* height: 30rem; */
-  margin-bottom: 8rem;
-  margin-top: 9rem;
-  margin-bottom: 13rem;
+  /* margin-bottom: 8rem; */
+  /* margin-top: 9rem; */
+  /* margin-bottom: 13rem; */
   /* scroll view */
   padding-top: 3rem;
 }
