--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,27 @@
 #About {
+  position: relative;
+  height: 100vh;
+}
+#About:before {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url("../../img/gallery/10.jpeg") no-repeat center center fixed;
+  background-size: cover;
+}
+#About:after {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: linear-gradient( transparent,rgba(0,0,0,1));
 }
   .left img {
     width: 100%;
