--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ body {
     border: none;
     color: white;
     font-size: 16px;
-    padding: 11px 26px 11px 26px;
+    padding: 5px 20px;
   }
   
   .button:hover {
