--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -1,4 +1,4 @@
-.works {
+  .works {
   padding: 0 3rem 0 3rem;
   display: flex;
   height: 90vh;
@@ -30,9 +30,10 @@
   margin-top: 1rem;
 }
 .s-button {
-  width: 8rem;
-  height: 2rem;
-  margin-top: 4rem;
+  /* width: 8rem; */
+  /* height: 2rem; */
+  /* margin-top: 4rem; */
+  margin: 0;
 }
 
 /* right side */
