Update CSS and routing for event page

--- a/src/App.css
+++ b/src/App.css
@@ -59,4 +59,8 @@ body {
 
   
 
-  
+  /* Event Page */
+  .bg-custom {
+    background: url("./img/black-background.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
