--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -16,21 +16,16 @@
   /* gap: 20px; */
 }
 
-.awesome > :nth-child(1) {
+/* .awesome > :nth-child(1) {
   color: var(--black);
   font-size: 2.5rem;
   font-weight: bold;
-}
-.awesome > :nth-child(2) {
+} */
+/* .awesome > :nth-child(2) {
   color: var(--orange);
   font-size: 2.5rem;
   font-weight: bold;
-}
-.awesome > :nth-child(3) {
-  color: var(--gray);
-  font-size: 14px;
-  margin-top: 1rem;
-}
+} */
 .s-button {
   width: 8rem;
   height: 2rem;
