--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -55,7 +55,7 @@
     margin-top: 0;
     flex-direction: column;
     gap: 5rem;
-    height: 66rem;
+    /* height: 66rem; */
     padding: 0;
   }
 
