Update CSS styles and remove commented code

--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,13 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
 body {
   overflow-x: hidden;
+  position: relative;
 }
 
 .App{
