--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -5,7 +5,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 7rem;
     flex-direction: column;
     gap: 2rem;
     position: relative;
@@ -13,10 +12,10 @@
 .t-heading{
     align-self: start;
 }
-.t-heading>*{
+/* .t-heading>*{
     font-size: 2rem;
     font-weight: bold;
-}
+} */
 .t-heading span:nth-of-type(2){
     color: var(--orange);
 }
