--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,7 +1,7 @@
 .contact-form{
     padding: 0 3rem 0 3rem;
     display: flex;
-    height: 80vh;
+    /* height: 80vh; */
     margin-top: 4rem;
       /* scroll */
   padding-top: 3rem;
@@ -47,7 +47,7 @@ textarea{
         padding: 0;
         flex-direction: column;
         gap: 5rem;
-        height: 40rem;
+        /* height: 40rem; */
     }
     .c-right .user{
         width: 16rem;
